<resources>
    <string name="app_name"> Dev Community </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="event_detail">"Event Detail"</string>

    <!--Assignation of the different strings in the app-->
    <string name="be_in_touch">"Be in touch"</string>
    <string name="networking">"Networking"</string>
    <string name="learn">"Learn"</string>
    <string name="try_again">"Try again"</string>
    <string name="error_n">"UPS... Couldn't Sing In"</string>
    <string name="error_n_general">"There's no one here working at the moment."</string>
    <string name="error">"Your username and password doesn't match. Please try again!"</string>
    <string name="error_general">"Please, connect to the internet"</string>
    <string name="anonymous">"ANONYMOUS USER"</string>
    <string name="continue_anonymous">"CONTINUE ANONYMOUSLY"</string>
    <string name="sign_in">"User or E-mail"</string>
    <string name="password">"Password"</string>
    <string name="news">"News"</string>
    <string name="articles">"Articles"</string>
    <string name="events">"Events"</string>
    <string name="calendar">"Calendar"</string>
    <string name="profile">"User Profile"</string>
    <string name="booksmarks">"Bookmarks"</string>
    <string name="settings">"Settings"</string>
    <string name="faqs">"FAQs"</string>
    <string name="favorites">"Favorites"</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
