<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/articles" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_query_builder_black_24dp"
            android:title="@string/calendar" />
    </group>
    <item>
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/favorites" />
            <item
                android:id="@+id/nav_booksmarks"
                android:icon="@drawable/ic_bookmark_black_24dp"
                android:title="@string/booksmarks" />
        </menu>
    </item>
    <item>
        <menu>
            <item
                android:id="@+id/nav_faqs"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/faqs" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>

